# Jetson-AKS-IIoT

./: CMakeLists.txt  Makefile  README.md  complete-setup.sh
k3s-siwvs/: development-plan.txt
k3s-siwvs/docker/dashboard/: Dockerfile
k3s-siwvs/docker/ros2-base/: Dockerfile.arm64
k3s-siwvs/docker/ros2-inventory/: Dockerfile.arm64
k3s-siwvs/docker/ros2-vision/: Dockerfile.arm64
k3s-siwvs/docker/ros2-weight/: Dockerfile.arm64
k3s-siwvs/gazebo/plugins/weight_sensor_plugin/: CMakeLists.txt  package.xml
k3s-siwvs/gazebo/plugins/weight_sensor_plugin/include/weight_sensor_plugin/: weight_sensor_plugin.hpp
k3s-siwvs/gazebo/plugins/weight_sensor_plugin/src/: weight_sensor_plugin.cpp
k3s-siwvs/kubernetes/: apply.yaml
k3s-siwvs/ros2/: CMakeLists.txt
k3s-siwvs/ros2/siwvs_bringup/: CMakeLists.txt  package.xml
k3s-siwvs/ros2/siwvs_bringup/launch/: gazebo_simulation.launch.py
k3s-siwvs/ros2/siwvs_bringup/rviz/: siwvs.rviz
k3s-siwvs/ros2/siwvs_bringup/worlds/: shelf_inventory.world  shelf_inventory.world.xml
k3s-siwvs/ros2/siwvs_control/: CMakeLists.txt  package.xml
k3s-siwvs/ros2/siwvs_control/include/siwvs_control/: control_interfaces.hpp
k3s-siwvs/ros2/siwvs_control/scripts/: weight_sensor_node.py
k3s-siwvs/ros2/siwvs_control/src/: weight_sensor_node.cpp
k3s-siwvs/ros2/siwvs_inventory/: package.xml
k3s-siwvs/ros2/siwvs_inventory/scripts/: inventory_manager.py
k3s-siwvs/ros2/siwvs_msgs/: CMakeLists.txt  package.xml
k3s-siwvs/ros2/siwvs_msgs/msg/: WeightSensor.msg
k3s-siwvs/ros2/siwvs_vision/: package.xml
k3s-siwvs/ros2/siwvs_vision/scripts/: camera_node.py
k3s-siwvs/setup/: config.yaml  install.sh  storage-setup.yaml
terraform/: README.md  aks-cluster.tf  arm-node-pool.tf  main.tf  outputs.tf  setup_terraform_sh.sh  storage.tf  variables.tf
