<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>siwvs_bringup</n>
  <version>0.1.0</version>
  <description>Launch files and configuration for Shelf Inventory Weight Verification System</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>siwvs_control</exec_depend>
  <exec_depend>siwvs_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
